<resources>
    <string name="app_name">All Star</string>
    <string name="memo_list">Memo List</string>
    <string name="make">make</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="touch_anyway">Touch Anyway.</string>
    <string name="memo">memo...</string>
    <string name="content">Content...</string>
    <string name="title">Title...</string>
    <string name="import_text">Import</string>
    <string name="search">Search</string>
    <string name="searchBtn">TODO</string>
</resources>