<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/makeFrame"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/deep_deep"
    tools:context=".MakeMemo">


    <ImageButton
        android:id="@+id/imageCloseBtn"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:background="@android:color/transparent"
        android:src="@drawable/closeicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/makememotitle"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_nomal"
        android:text="@string/memo"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/makeMemoSr"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:background="#65FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makememotitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newmemoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/deep_main"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newMemoContent"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top"

                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/makeMemoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/make"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

